PR fortran/13742 * decl.c (add_init_expr_to_sym): Verify that COMMON variable is not initialized in a disallowed fashion. * match.c (gfc_match_common): Likewise. (var_element): Verify that variable is not in the blank COMMON, if it is in a common.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@81899 138bc75d-0d04-0410-961f-82ee72b054a4